--- a/my-next-site/content/ohyo500M11_15.md
+++ b/my-next-site/content/ohyo500M11_15.md
@@ -17,6 +17,7 @@
 | 4回目 <u>b対面またはオンライン</u> | 発表原稿、<br>スライド作り②       | ・発表原稿、スライドを作る。                                 |
 | 5回目 対面<br>発表練習         | 発表原稿、<br>スライドの修正       | ・発表練習をし、必要な修正を行う。                              |
 | 6回目 対面発表               |                        |                                                |
+
 問1：資料1、2のような授業の説明として最も適当なものを、次の1～4の中から一
 つ選べ。
 
@@ -225,7 +226,10 @@ Y先生：「日本語の参照枠」ではd日本語熱達度の考え方も示
 学習項目：［復習］～からといって、～わけではない、～とは限らない、～に違いない、～わけがない、～のではないか（～んじゃない？）
 
 ＜教案＞
-![[p140kyoan.jpg]]
+
+![](/img/p140kyoan.jpg)
+
+
 **新人教員✕先生とベテラン教員Y先生の会話**
 ✕先生：Y先生、授業計画を立てたんですが、<u>a 著作権</u>のことが心配なんです。見ていただけますか。
 Y先生：どの部分？
