--- a/my-next-site/content/ohyo500M11_15.md
+++ b/my-next-site/content/ohyo500M11_15.md
@@ -53,6 +53,7 @@
 2. 情報リテラシーの差によって情報の獲得に差が生まれることをデジタル・デバイドと言う。
 3. 情報リテラシーとはITを上手く利用できるかどうかの能力を指す。
 4. 情報リテラシーとは、情報を批判的に評価し、効果的に活用する能力を指す。
+
 ---
 
 ## 問題12
@@ -79,10 +80,12 @@
 
 ＜資料3＞
 モデル会話（スクリプト）：
-タン：リーさん、なんか元気ないね。何かあった？
-リー：うん。最近、日本語の勉強が難しくて、なんか疲れちゃった。
-タン：日本語の勉強が難しい？
-リー：うん。聞き取りが苦手で、最近先生が話していることが分からないことがあるんだ。
+
+- タン：リーさん、なんか元気ないね。何かあった？
+- リー：うん。最近、日本語の勉強が難しくて、なんか疲れちゃった。
+- タン：日本語の勉強が難しい？
+- リー：うん。聞き取りが苦手で、最近先生が話していることが分からないことがあるんだ。
+
 ～～以下省略〜～
 
 問1：コミュニケーション言語能力を育成するために、資料2の下線部a「文法・表現の確認」、下線部b「文法・表現の練習」で開意することとして最も適当なものを、次の1〜4の中から一つ選べ。
@@ -119,6 +122,7 @@
 2. 導入や練習で扱われる内容は同じ文脈で統一されており、学習者の理解をスムーズにする。
 3. どこでどう使うか自が持てない言語知識ではなく、実際に使える言語知識を育成できる。
 4. 授業構成にはいくつかの型があり、型に沿って授業を組み立てることが推奨されている。
+
 ---
 
 ## 問題13
@@ -126,14 +130,14 @@
 次の会話は、新人教師Xと先輩教師Yの会話である。会話を読み、後の問い（問1~5）に答えよ。
 
 ＜会話＞
-✕先生：今日、学生からこんな相談がありました。自分の国の日本語クラスでは中級だったそうですが、この学校では初級クラスになってしまったそうです。
-Y先生：そうですか。和3年に文化庁から報告のあったa「日本語教育の参照枠」が広く使われるようになると、共通の指標で話し合えるようになるかもしれませんね。
-✕先生：「日本語教育の参照枠」は、言語知識の習得だけではなくて、言語を用いて
-b共生社会を目指すって言われていますよね。
-Y先生：ええ。言語の習得自体を目的とするのではなく、©学習者が自分らしさを発揮できるようになることを目指していますね。
-✕先生：自分らしさを発理できるような能力とは、具体的にどのように捉えたらいいでしょうか。
-Y先生：「日本語の参照枠」ではd日本語熱達度の考え方も示されています。詳しくは、文化庁からの報告害を読んでみるといいと思いますよ。
-✕先生：ありがとうございます。
+
+- ✕先生：今日、学生からこんな相談がありました。自分の国の日本語クラスでは中級だったそうですが、この学校では初級クラスになってしまったそうです。
+- Y先生：そうですか。和3年に文化庁から報告のあったa「日本語教育の参照枠」が広く使われるようになると、共通の指標で話し合えるようになるかもしれませんね。
+- ✕先生：「日本語教育の参照枠」は、言語知識の習得だけではなくて、言語を用いて b <u>共生社会を目指す</u>って言われていますよね。
+- Y先生：ええ。言語の習得自体を目的とするのではなく、c <u>学習者が自分らしさを発揮できるようになる</u>ことを目指していますね。
+- ✕先生：自分らしさを発理できるような能力とは、具体的にどのように捉えたらいいでしょうか。
+- Y先生：「日本語の参照枠」では d <u>日本語熟達度</u>の考え方も示されています。詳しくは、文化庁からの報告害を読んでみるといいと思いますよ。
+- ✕先生：ありがとうございます。
 
 問1：下線部a「日本語教育の参照枠」の説明として不適当なものを、次の1～4の中から一つ選べ。
 
@@ -169,15 +173,17 @@ Y先生：「日本語の参照枠」ではd日本語熱達度の考え方も示
 2. A2レベルは、「自立した言語使用者」に当たり、仕事、学校、規楽でふだん出合うような身近な話題について、共通語による話し方であれば、主要点を理解できる能力がある。
 3. A2レベルは、ごく基本的な個人情報や家族情報、買い物、近所、仕事など、直接的関係がある領域に関する、よく使われる文や表現を理解できる能力がある。
 4. A2レベルは、暗記した語句を使って、最任の伝達などの極めて限られた内容しか話せないレベルである。
+
 ---
 
 ## 問題14
 
 次の文率を読み、後の問い（間1~5）に答えよ。
 
-近年、<u>a 日本社会で暮らす人々の文化的背景は、多様化・複雑化してきている。</u>そのため、異文化との接触によって、日本の異文化や価値観に対する考え方も変化しつつある。一方で、葛勝（コンフリクト）や対立も生している。募が生じた場合、それを解決するための反応の型を「<u>b 葛藤解決方略</u>」と言う。ビジネス日本語の分野では、異文化背景を理解し、摩擦や問題の解決を目指した。<u>c ケース学習</u>が行われることがあ
-る。
+近年、<u>a 日本社会で暮らす人々の文化的背景は、多様化・複雑化してきている。</u>そのため、異文化との接触によって、日本の異文化や価値観に対する考え方も変化しつつある。一方で、葛勝（コンフリクト）や対立も生している。募が生じた場合、それを解決するための反応の型を「<u>b 葛藤解決方略</u>」と言う。ビジネス日本語の分野では、異文化背景を理解し、摩擦や問題の解決を目指した。<u>c ケース学習</u>が行われることがある。
+
 一方、グローバル化に伴う多文化社会の構成員として、社会への能動的な参加や共同体の成員としての掃属意識の滋養など、社会に積極的に関わり、行為する主体としての市民像が求められるようになり、ロシティズンシップ教育が注目されるようになった。シティズンシップ教育は、社会参加の実践を重視することに特徴がある。<u>d シティズンシップ教育</u>と日本語教育を組み合わせることは、単なる語学学習にとどまらず、社会に積極的に参加できる学習者の育成につながる。
+
 また、大学をはじめとして教育機関では、異文化協働学習として、<u>e 文化的背景が多様な学生によって構成される学びの場</u>が提供されるようになった。
 
 問1：文章中の下線部a「日本社会で暮らす人々の文化的背景は、多様化・複雑化してきている」とあるが、文化的背景の多様化・複雑化の説明として不適当なものを、次の1～4の中から一つ選べ。
@@ -213,6 +219,7 @@ Y先生：「日本語の参照枠」ではd日本語熱達度の考え方も示
 2. 多様な学生が教室に存在するだけで、異文化間数育は十分効果がある。
 3. 大学と地域コミュニティは異なる学びを対象としているため、協働して学びの場を創造するべきではない。
 4. 価値観には文化的な多様性があるが、リーダーシップやコミュニケーションの仕方は文化にかかわらず普遍的であることに気づくことが重要である。
+
 ---
 
 ## 問題15
@@ -231,19 +238,19 @@ Y先生：「日本語の参照枠」ではd日本語熱達度の考え方も示
 
 
 **新人教員✕先生とベテラン教員Y先生の会話**
-✕先生：Y先生、授業計画を立てたんですが、<u>a 著作権</u>のことが心配なんです。見ていただけますか。
-Y先生：どの部分？
-✕先生：最後のまとめの活動で、来月の日本語能力試験対策のため、市販の問題集をコピーして配布しようと思っているんです。学生たちが購入していない問題集を、教員が<u>b 複製</u>して配布することに、何か問題がありますか。教育目的の利用なので、大丈夫かなと思って、教には入れたのですが。
-Y先生：そうですね。教育目的と言っても、そもそもうちは営利目的の日本語学校ですから、<u>c 著作権法第35条の権利制限規定</u>には当たらないんですよね。
-X先生：権利制限規定？
-Y先生：教育機関における複製等の例外規定です。著作者の許可がなくても複製、公衆送信、公の伝達ができるんです。うちは対象外ですけどね。それで、今回の投業の目的は、非公式の議論における意見の主張で、問題を使った練習は、そのサポート的な存在ですよね。
-✕先生：はい。
-Y先生：活動の主従がはっきりしていますね。問題の<u>d 改変</u>はありますか。若作者は、意に反して無断で改変されない権利「同一性保持権」を持っているので、改変は問題になるんですが。
-✕先生：学生に身近な語菜を使った問題に改変したかったんですが、やめておきま
-した。
-Y先生：じゃあ、問題集に「禁複製」などの記載はありませんでしたか。
-✕先生：「複製は著作権法上の例外を除き、禁止する」と書かれていました。うちは例外規定に入らないから使えないのでしょうか。
-Y先生：うーん、今回の場合、椎利制限規定第32条の<u>「e 引用」</u>という観点で使えるかなとも考えましたけど・・・・・。やっぱりうちでは厳しいかもしれませんね。使いたい問題を参考にしながら、私たちで、新しい問題を作成しましょう。
+
+- ✕先生：Y先生、授業計画を立てたんですが、<u>a 著作権</u>のことが心配なんです。見ていただけますか。
+- Y先生：どの部分？
+- ✕先生：最後のまとめの活動で、来月の日本語能力試験対策のため、市販の問題集をコピーして配布しようと思っているんです。学生たちが購入していない問題集を、教員が<u>b 複製</u>して配布することに、何か問題がありますか。教育目的の利用なので、大丈夫かなと思って、教には入れたのですが。
+- Y先生：そうですね。教育目的と言っても、そもそもうちは営利目的の日本語学校ですから、<u>c 著作権法第35条の権利制限規定</u>には当たらないんですよね。
+- X先生：権利制限規定？
+- Y先生：教育機関における複製等の例外規定です。著作者の許可がなくても複製、公衆送信、公の伝達ができるんです。うちは対象外ですけどね。それで、今回の投業の目的は、非公式の議論における意見の主張で、問題を使った練習は、そのサポート的な存在ですよね。
+- ✕先生：はい。
+- Y先生：活動の主従がはっきりしていますね。問題の<u>d 改変</u>はありますか。若作者は、意に反して無断で改変されない権利「同一性保持権」を持っているので、改変は問題になるんですが。
+- ✕先生：学生に身近な語菜を使った問題に改変したかったんですが、やめておきました。
+- Y先生：じゃあ、問題集に「禁複製」などの記載はありませんでしたか。
+- ✕先生：「複製は著作権法上の例外を除き、禁止する」と書かれていました。うちは例外規定に入らないから使えないのでしょうか。
+- Y先生：うーん、今回の場合、椎利制限規定第32条の<u>「e 引用」</u>という観点で使えるかなとも考えましたけど・・・・・。やっぱりうちでは厳しいかもしれませんね。使いたい問題を参考にしながら、私たちで、新しい問題を作成しましょう。
 
 問1：会話の中の下線部a「著作権」に関する記述として最も適当なものを、次の1～
 4の中から一つ選べ。
@@ -282,3 +289,4 @@ Y先生：うーん、今回の場合、椎利制限規定第32条の<u>「e 引
 4. 引用を行う「必然性」があること
 
 
+---
