下線部未編集部分Updates

--- a/my-next-site/content/ohyo500M11_15.md
+++ b/my-next-site/content/ohyo500M11_15.md
@@ -4,7 +4,7 @@
 
 ＜資料1＞ クラスの概要
 レベル：中級前半　　学習者数：8名
-回数：全6回（対面、オンライン（<u>a.zoom</u>））
+回数：全6回（対面、オンライン（a <u>zoom</u>））
 授業内容：自分の国の社会問題について調べて発表する。
 
 ＜資料2＞授業計画
