--- a/my-next-site/content/ohyo500M6_10.md
+++ b/my-next-site/content/ohyo500M6_10.md
@@ -2,12 +2,12 @@
 
 次の教師同士の会話を読み、後の問い（問1~5）に答えよ。
 
-- ✕先生：最近、授業の進め方についてちょっと悩んでいるんです。日変換練習や代入練習、それから拡大練習など、しっかりやっているんですが、学習者の会話力がなかなか伸びないんですよね。
-- Y先生：そうなんですか。確かに、そういう練習も必要だと思いますが、例えば、り「町のパンフレットを作る」などのタスクを取り入れてみたらどうですか。学習者はそれぞれ町の情報を持っているので、お互いに情報を交換しながらパンフレットを作れると思いますよ。
+- ✕先生：最近、授業の進め方についてちょっと悩んでいるんです。a <u>変換練習や代入練習、それから拡大練習</u>など、しっかりやっているんですが、学習者の会話力がなかなか伸びないんですよね。
+- Y先生：そうなんですか。確かに、そういう練習も必要だと思いますが、例えば、b<u>「町のパンフレットを作る」などのタスク</u>を取り入れてみたらどうですか。学習者はそれぞれ町の情報を持っているので、お互いに情報を交換しながらパンフレットを作れると思いますよ。
 - ✕先生：それ、面白そうですね！学習者同士がやりとりをする中で、文型を使う機会も増えそうです。
-- Y先生：そうですね。ただ、教室を言葉の練習の場とするのではなく、人間的な成長ができる社会的な空間として提える©社会文化的アプローチの考え方も大切にしたいですね。
+- Y先生：そうですね。ただ、教室を言葉の練習の場とするのではなく、人間的な成長ができる社会的な空間として提える c <u>社会文化的アプローチ</u>の考え方も大切にしたいですね。
 - ✕先生：なるほど。
-- Y先生：それから、学習者の持っている力を合じて、彼らのd態皮や姿勢を認め、成功したら褒めるといった心理面の配慮や、文化の変容にも目を向けていきたいですね。
+- Y先生：それから、学習者の持っている力を合じて、彼らの d <u>態度や姿勢を認め、成功したら褒める</u>といった心理面の配慮や、e <u>文化の変容</u>にも目を向けていきたいですね。
 - ✕先生：ありがとうございます。なんか視野が広くなった感じがします。
 
 間1：会話の中の下線部a「変換練習や代入練習、それから拡大練習」の特徴として不適当なものを、次の1～4の中から一つ選べ。
